stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Put':
CircularBuffer.c:68:15: error: expected ';' before 'self'
   68 |  self->count++
      |               ^
      |               ;
   69 |  self->input_index=nextIndex(self,self->input_index);
      |  ~~~~          
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
